SERVER-13500 prevent syncSourceFeedback segfault by not allowing NULL members to be added to _members map