src/mongo/db/repl/rs.h
@@ -544,7 +544,7 @@ namespace mongo {
         bool setMaintenanceMode(const bool inc);
 
         // Records a new slave's id in the GhostSlave map, at handshake time.
-        void registerSlave(const BSONObj& rid, const int memberId);
+        bool registerSlave(const BSONObj& rid, const int memberId);
     private:
         Member* head() const { return _members.head(); }
     public:
